--- a/ADDFab.html
+++ b/ADDFab.html
@@ -63,12 +63,13 @@
             most of them are patented designs. But I can give you some information just to give you a taste of it.
                        <br>
            <br>
-            - <b>Obaggo Plastic Bag Recycling</b>: Obaggo is a kitchen appliance that enables you to recycle your plastic bags and packaging film,
+            <!--- <b>Obaggo Plastic Bag Recycling</b>: Obaggo is a kitchen appliance that enables you to recycle your plastic bags and packaging film,
             such as bread bags, cereal box liners, paper product overwrap, etc., in the comfort and convenience of your curbside recycling 
             bin. " Our solution for recycling plastic film is to enable consumers and businesses to densify their plastic into rigid pucks 
             that are economical to collect curbside, and easy to sort at Material Recovery Facilities.  We want to prove that this 
             material is valuable by turning the collected material into new recycled products, creating a circular economy for thin 
             film plastic packaging" - David New, Obaggo Recycling, LLC (https://www.obaggo.com/)
+            -->
           <br>
 <br>
             - <b>Arm Band Casing</b>, a wearable device, used to monitor health in a real-world settings.
