--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body  {
 </head>
 
 <body>
-  <script src="./js/index.js"></script>
+    <script src="./js/index.js"></script>
   <!-- Sticky Header BEGINS -->
   <div id="sticky-header">
     <div class="top-navigation">
@@ -82,7 +82,88 @@ body  {
   <br>
   <div class="domain-design" id="domain-design">
     <h2><span class="underline-magical-sub-header">AREA OF INTEREST</span></h2>
-  <p>
+  </div>
+    <div class="honeycomb">
+      <div class="ibws-fix">
+  
+        <div class="hexagon2">
+          <div class="hexagontent"></div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">MECHANICAL DESIGN</div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">LEAN</div>
+        </div>
+        <div class="hexagon2">
+          <div class="hexagontent">QUALITY CONTROL</div>
+        </div>
+        <div class="hexagon3">
+          <div class="hexagontent"></div>
+        </div>
+        <div class="hexagon2">
+          <div class="hexagontent">3D PRINTING</div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">PRODUCT DEVELOPMENT</div>
+        </div>
+      </div>
+      <div class="ibws-fix">
+  
+        <div class="hexagon3">
+          <div class="hexagontent">SIX SIGMA</div>
+        </div>
+        <div class="hexagon2">
+          <div class="hexagontent">PLC & HMI/ SCADA</div>
+        </div>
+        <div class="hexagon3">
+          <div class="hexagontent"></div>
+        </div>
+        <div class="hexagon4">
+          <div class="hexagontent"></div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">DATA ACQUISITION & ANALYSIS</div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">FINITE ELEMENT ANALYSIS</div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">PROGRAMMING</div>
+        </div>
+      </div>
+  
+      <div class="ibws-fix">
+        <div class="hexagon">
+          <div class="hexagontent">
+            <h1></h1>
+          </div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent">CAM / CIM</div>
+        </div>
+        <div class="hexagon">
+          <div class="hexagontent"></div>
+        </div>
+        <div class="hexagon3">
+          <div class="hexagontent">DESIGN OPTIMIZATION</div>
+        </div>
+        <div class="hexagon2">
+          <div class="hexagontent"></div>
+        </div>
+  
+        <div class="hexagon2">
+          <div class="hexagontent"></div>
+        </div>
+        <div class="hexagon3">
+          <div class="hexagontent"></div>
+        </div>
+      </div>
+    </div>
+    <div class="domain-design" id="domain-design">
+
+    
+    <p>
     Having skills in the mechanical design along with the knowledge of manufacturing practices, is a great combination. It helps you to make an idea into reality, 
     which is one of the most crucial skills I possess. It bolsters my confidence to incline more towards these two domains. A combination of these skills helps me 
     to work as a cross-functional team member and discuss feasibility and technicalities with colleagues/ vendors/ suppliers, utilize my resources for traditional 
@@ -90,7 +171,7 @@ body  {
   <br>
   <br>
   The designer should not only design highly sophisticated components but also needs to consider what the manufacturing and quality process will be while in the designing 
-  phase. All these things need to be done when technologies are evolving and changing every year. Considering this, I have developed some set of skills which help me to:
+  phase. All these things need to be done when technologies are evolving and changing every year. <!--Considering this, I have developed some set of skills which help me to:
   <br>
   <br>
     <b>-></b> Design any parts from scratch, perform design analysis by simulating real-life conditions and optimize the components for enhancing the performance.
@@ -106,87 +187,11 @@ body  {
 <b>-></b> Get the quality parts by implementing six sigma/ lean principles, APQP, PPAP, DVP&R, DFM/A, etc. and electrical and safety certifications like UL, CE, GMark, SAA, etc.
   
     </p>
-
-  
+  -->
+  </div>
   </div>  
   
-  <div class="honeycomb">
-    <div class="ibws-fix">
-
-      <div class="hexagon2">
-        <div class="hexagontent"></div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">MECHANICAL DESIGN</div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">LEAN</div>
-      </div>
-      <div class="hexagon2">
-        <div class="hexagontent">QUALITY CONTROL</div>
-      </div>
-      <div class="hexagon3">
-        <div class="hexagontent"></div>
-      </div>
-      <div class="hexagon2">
-        <div class="hexagontent">3D PRINTING</div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">PRODUCT DEVELOPMENT</div>
-      </div>
-    </div>
-    <div class="ibws-fix">
-
-      <div class="hexagon3">
-        <div class="hexagontent">SIX SIGMA</div>
-      </div>
-      <div class="hexagon2">
-        <div class="hexagontent">PLC & HMI/ SCADA</div>
-      </div>
-      <div class="hexagon3">
-        <div class="hexagontent"></div>
-      </div>
-      <div class="hexagon4">
-        <div class="hexagontent"></div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">DATA ACQUISITION & ANALYSIS</div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">FINITE ELEMENT ANALYSIS</div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">PROGRAMMING</div>
-      </div>
-    </div>
-
-    <div class="ibws-fix">
-      <div class="hexagon">
-        <div class="hexagontent">
-          <h1></h1>
-        </div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent">CAM / CIM</div>
-      </div>
-      <div class="hexagon">
-        <div class="hexagontent"></div>
-      </div>
-      <div class="hexagon3">
-        <div class="hexagontent">DESIGN OPTIMIZATION</div>
-      </div>
-      <div class="hexagon2">
-        <div class="hexagontent"></div>
-      </div>
-
-      <div class="hexagon2">
-        <div class="hexagontent"></div>
-      </div>
-      <div class="hexagon3">
-        <div class="hexagontent"></div>
-      </div>
-    </div>
-  </div>
+  
   </div>
 
   <br>
