--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ body  {
   <link href="https://fonts.googleapis.com/css?family=Josefin Sans" rel="stylesheet">
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <link rel="stylesheet" href="./css/style.css">
+
   
   
 </head>
@@ -210,6 +211,13 @@ body  {
 
   <div class="prjt">
     <div class="sub-project">
+      <a href="Project8.html" target="_self">
+        <img src="./images/asmitjainP8_1.png" class="project-image" alt="Image of my project1">
+        <h3 class="card-title">Real-time Data Acquisition of Water Treatment System </h3>
+        <p class="card-subtitle">AUTOMATION . DATA ACQUISITION</p>
+      </a>
+    </div>
+    <div class="sub-project">
       <a href="Project1.html" target="_self">
         <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project1">
         <h3 class="card-title">3D Scanner for Medical Applications</h3>
@@ -338,25 +346,23 @@ body  {
   <div class="skills-design" id="skills-design">
     <h2><span class="underline-magical-sub-header">SKILLS</span></h2>
     <p>
-      I always aimed to be technically minded, to be able to demonstrate numerical, scientific abilities and have a problem-solving attitude with the combination of best in class
-      technologies. This approach has helped me to augment some of the best technologies and software skills which could be helpful at the workplace to encounter
-      complex and unfamiliar engineering problems and derive the best data-driven, calculated solutions. My involvement in different projects at diverse workplaces has aided me
-      to gain confidence using my software and hands-on skills. 
-      <br>
-      <br>
-      In this section below, I have mentioned all the skills I have acquired based on different categories.  Most of the skills are self-taught. But I was very fortunate
-      to implement all of these during my studies, research, projects and at workplaces to retain it for a longer time. 
-      <br>
-      <br>
-      And if you want to learn about my soft skills, let’s have a discussion and plan a project together! I feel that soft skills and work ethics can’t be expressed. 
-      One needs to feel or experience it at the workplace. It’s essential to notice how I react to a difficult situation, how flexible I am, how easily I can communicate 
-      technical things with others, my leadership qualities, multi-tasking skills and my behaviour while working in a team. So, I’ll let you decide what soft skills make
-       me stand among the competition.
-
+    I always aimed to be technically minded, to be able to demonstrate numerical, scientific abilities and have a problem-solving attitude with the combination of best in class
+    technologies. This approach has helped me to augment some of the best technologies and software skills which could be helpful at the workplace to encounter
+    complex and unfamiliar engineering problems and derive the best data-driven, calculated solutions. My involvement in different projects at diverse workplaces has aided me
+    to gain confidence using my software and hands-on skills. 
+    <br>
+    <br>
+    In this section below, I have mentioned all the skills I have acquired based on different categories.  Most of the skills are self-taught. But I was very fortunate
+    to implement all of these during my studies, research, projects and at workplaces to retain it for a longer time. 
+    <br>
+    <br>
+    And if you want to learn about my soft skills, let’s have a discussion and plan a project together! I feel that soft skills and work ethics can’t be expressed. 
+    One needs to feel or experience it at the workplace. It’s essential to notice how I react to a difficult situation, how flexible I am, how easily I can communicate 
+    technical things with others, my leadership qualities, multi-tasking skills and my behaviour while working in a team. So, I’ll let you decide what soft skills make
+    me stand among the competition.
     </p>
   </div>
-
-  <div class="prjt">
+    <div class="prjt">
     <div class="sub-project">
         <h3 class="card-title">CAD & FEA</h3>
         <p class="card-subtitle">- SolidWorks (CSWP)<br>- AutoCAD <br>- Siemens NX <br>- CATIA <br>- Pro-E/ Creo <br>- ANSYS <br>- SolidWorks Simulation <br>- Bill of Material</p>
@@ -371,11 +377,9 @@ body  {
       </a>
     </div>
     <div class="sub-project">
-      
-       
-        <h3 class="card-title">DAQ & Analysis</h3>
-        <p class="card-subtitle">- Microsoft PowerBI   <br>- MS Office Suite <br>- Minitab <br>- Labjack & NI Data Loggers <br>- Statistical Process Control* <br>- NI LabVIEW* <br>- Simulink*
-         <br>- Design Of Experiments*  <br>- MES, ERP</p>
+      <h3 class="card-title">DAQ & Analysis</h3>
+      <p class="card-subtitle">- Microsoft PowerBI   <br>- MS Office Suite <br>- Minitab <br>- Labjack & NI Data Loggers <br>- Statistical Process Control* <br>- NI LabVIEW* <br>- Simulink*
+      <br>- Design Of Experiments*  <br>- MES, ERP</p>
       </a>
     </div>
     <div class="sub-project">
@@ -419,7 +423,11 @@ body  {
       </a>
     </div>
     </div>
-  </div>
+  
+
+</div>  
+
+  
     <!-- Skills Section ENDS -->
 
   <!-- About Section BEGINS -->
