--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ body  {
   <div class="prjt">
     <div class="sub-project">
       <a href="Project8.html" target="_self">
-        <img src="./images/asmitjainP8_1.png" class="project-image" alt="Image of my project1">
+        <img src="./images/asmitjainP8_8.PNG" class="project-image" alt="Image of my project1">
         <h3 class="card-title">Real-time Data Acquisition of Water Treatment System </h3>
         <p class="card-subtitle">AUTOMATION . DATA ACQUISITION</p>
       </a>
