--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!-- Sticky Header ENDS -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">ASMIT JAIN</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -103,15 +103,18 @@
       <div class="container">
         <h1 class="title">About Me</h1>
         <hr>
-        <p>I'm a Computer Science senior at the University of Massachusetts Amherst experienced in Mobile,
-          Web, Full stack development, Machine learning, and NLP.
-          I worked as a Software Engineering Intern at Google this Summer (2020) with the Google Ads team
-          (Campaign Manager)
-          and am looking for new grad Full-time roles starting 2021.
-          I love to work on new ideas, so feel free to connect on <a href="https://www.linkedin.com/in/aryansingh2/"
-            target="_blank">LinkedIn</a> or send an email at
-          aryansingh@umass.edu !
-
+        <p>
+          I am an MS Mechanical Engineer from the University of Massachusetts, Amherst. I am currently working as a Research & Development Engineer at
+          <a href="https://www.exceldryer.com/" target="_blank">Excel Dryer</a>
+          and part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank">ADDFab Lab</a> in Life Sciences Laboratories - UMass
+          Amherst.
+          <br>
+          <br>
+          Welcome to my WORK PORTFOLIO, a virtual showcase of my multidisciplinary engineering career. 
+          It is an attempt to build my first digital masterpiece, which is one of the best ways to demonstrate all my projects and prior work experience 
+          in different domains and industries. This website will walk you through over my comprehensive work samples and will help you to 
+          understand what my background is, what I have accomplished and what I am capable of achieving in the future. <a href="https://www.linkedin.com/in/thisisasmit/"
+            target="_blank">LinkedIn</a> or send an email at <b>asmitjain@gmail.com</b>
         </p>
       </div>
     </section>
