--- a/index.html
+++ b/index.html
@@ -48,21 +48,13 @@
 
 <body>
 
-
-  <!-- Sticky Header BEGINS -->
-  <!-- <div id="sticky-header">
-    <div class="top-navigation">
-      <span><a href="index.html">ASMIT JAIN</a></span>
-      <span><a href="#workexp-design">WORK EXPERIENCE</a></span>
-      <span><a href="#project-design">PROJECTS</a></span>
-      <span><a href="#skills-design">SKILLS</a></span>
-      <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
-    </div>
-  </div> -->
-  <!-- Sticky Header ENDS -->
+  <!-- NAV BAR -->
+  <!-- NAV BAR -->
+  <!-- NAV BAR -->
+  <!-- NAV BAR -->
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a href="#" class="logo" style="font-size: 25px; color:aqua;">Asmit Jain</a>
+      <a href="index.html" class="logo" style="font-size: 30px; color:white;">Asmit Jain</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -71,16 +63,31 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#" style="color: white;">Work Experience</a>
+            <a class="nav-link active" href="index.html" style="color: white;">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: white;">Projects</a>
+            <a class="nav-link active" href="#workexp" style="color: white;">Work Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: white;">Skills</a>
+            <a class="nav-link" href="#projects" style="color: white;">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: white;">Contact Me</a>
+            <a class="nav-link" href="#skills" style="color: white;">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education" style="color: white;">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacts" style="color: white;">Contact Me</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:rgb(54, 199, 235);">
+              Resume/CV
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view">Resume</a>
+              <a class="dropdown-item" href="https://drive.google.com/file/d/1ifSS1zRQENcE0CZpVwze0H2-dhf4BsDj/view?usp=sharing">CV</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -91,7 +98,10 @@
 
   <main>
 
-
+  <!-- ABOUT -->
+  <!-- ABOUT -->
+  <!-- ABOUT -->
+  <!-- ABOUT -->
 
     <section class="section" id="aboutme" style="padding-top: 100px;">
       <div class="container">
@@ -107,14 +117,20 @@
           and am always looking for new projects.
           If you'd like to learn more about my skills and qualifications, feel free to connect with me on
           <a href="https://www.linkedin.com/in/thisisasmit/" target="_blank">LinkedIn</a> or send a quick email at
-          <b>thisisasmit@gmail.com</b>
+          <a href="mailto:thisisasmit@gmail.com" target="-blank">thisisasmit@gmail.com</a>
         </p>
       </div>
     </section>
 
+
+  <!-- WORK EXP -->
+  <!-- WORK EXP -->
+  <!-- WORK EXP -->
+  <!-- WORK EXP -->
+
     <div class="album py-3" id="workexp">
       <div class="container">
-        <h1 class="title">Work Experience</h1>
+        <h1 class="title" style="padding-top: 40px;"> Work Experience </h1>
         <hr>
 
         <div class="row">
@@ -259,7 +275,7 @@
 
     <div class="album py-2" id="projects">
       <div class="container">
-        <h1 class="title">Projects</h1>
+        <h1 class="title" style="padding-top: 40px;">Projects</h1>
         <hr>
 
         <div class="row">
@@ -447,7 +463,7 @@
     <!-- SKILLS -->
     <div class="album py-3" id="skills">
       <div class="container">
-        <h1 class="title">Skills</h1>
+        <h1 class="title" style="padding-top: 40px;" >Skills</h1>
         <hr>
         <div class="row m-3">
           <h4 class="sub-title p-2">CAD & FEA</h4>
@@ -516,66 +532,103 @@
           <button type="button" class="btn btn-outline-secondary m-2">Tools/ Fixtures</button>
           <button type="button" class="btn btn-outline-secondary m-2">Injection Molding</button>
         </div>
-        
-            
-        </div>
+
+
       </div>
     </div>
+    </div>
 
+    <!-- EDUCATION -->
+    <!-- EDUCATION -->
+    <!-- EDUCATION -->
+    <!-- EDUCATION -->
     <div class="album py-3" id="education">
       <div class="container">
-        <h1 class="title">Education</h1>
+        <h1 class="title" style="padding-top: 40px;" >Education</h1>
         <hr>
 
         <div class="row">
-          <div class="col-md-6">
-            <div class="card mb-4 shadow-sm" style= "width: 35rem;">
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
               <div class="card-body">
-                <h3 class="card-title">University of Massachusetts - Amherst </h3>
+                <h4 class="card-title">UMass - Amherst </h4>
                 <br>
                 <medium class="card-subtitle">Master of Science (MS) - Mechanical Engineering </medium>
                 <br>
-                <medium class="text-muted ">Sep 2017 - May 2019</medium>
+                <small class="text-muted ">Sep 2017 - May 2019</small>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card mb-4 shadow-sm" style= "width: 35rem;">
+            <div class="card mb-4 shadow-sm">
               <div class="card-body">
-                <h3 class="card-title">MIT Ujjain - RGPV University </h3>
+                <h4 class="card-title">MIT Ujjain - RGPV </h4>
                 <br>
                 <medium class="card-subtitle">Bachelor of Engineering (BE) - Mechanical Engineering</medium>
                 <br>
-                <medium class="text-muted">Aug 2011 - June 2015</medium>
+                <small class="text-muted">Aug 2011 - June 2015</small>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- CONTACT -->
-    <!-- CONTACT -->
-    <!-- CONTACT -->
-    <!-- CONTACT -->
 
-    <div class="container " id="contacts">
-      <h1 class="title">Contact Me</h1>
-      <hr>
-      <div class="text-center">
-        <!-- <a href=""><i class="fa fa-mail"></i></a>
-        <a href=""><i class="fa fa-website"></i></a> -->
-        <a href=""><i class="fa fa-facebook"></i></a>
-        <a href=""><i class="fa fa-github"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
+
+    <!-- CONTACT -->
+    <!-- CONTACT -->
+    <!-- CONTACT -->
+    <!-- CONTACT -->
+    <section class="section">
+      <div class="container">
+        <h1 class="title" style="padding-top: 40px;" >Contacts</h1>
+        <hr />
+        <div class="row">
+          <div class="col-md-3">
+            <div>
+              <a href="https://github.com/asmitjain" target="_blank">
+                <div class="text-center"><i class="fab fa fa-github"style="color: black;"></i>
+              </a>
+              <p class="heading"><a href="https://github.com/asmitjain" target="_blank">github.com/asmitjain</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div>
+            <a href="mailto:thisisasmit@gmail.com" target="_blank">
+              <div class="text-center"><i class="fab fa fa-envelope"style="color: black;"></i>
+            </a>
+            <p class="heading"><a href="mailto:thisisasmit@gmail.com" target="_blank">thisisasmit@gmail.com</a></p>
+          </div>
+        </div>
       </div>
-    </div>
+      <div class="col-md-3">
+        <div>
+          <a href="https://www.linkedin.com/in/thisisasmit" target="_blank">
+            <div class="text-center"><i class="fab fa fa-linkedin" style="color: black;"></i>
+          </a>
+          <p class="heading"><a href="https://www.linkedin.com/in/thisisasmit/"
+              target="_blank">linkedin.com/in/thisisasmit</a></p>
+        </div>
+      </div>
+      </div>
+      <div class="col-md-3">
+        <div>
+          <a href="https://www.facebook.com/thisisasmit/" target="_blank">
+            <div class="text-center"><i class="fab fa fa-facebook"style="color: black;"></i>
+          </a>
+          <p class="heading"><a href="https://www.facebook.com/thisisasmit/"
+              target="_blank">facebook.com/thisisasmit/</a></p>
+            </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
 
-  <!-- Work Experience Section ENDS -->
-
-  <!-- External links Section ENDS -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
