--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.png"
+              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.PNG"
                 alt="">
               <div class="card-body">
                 <h5 class="card-title">Real-time Data Acquisition of Water Treatment System </h5>
